nav-bar styled a little lol

--- a/main.html
+++ b/main.html
@@ -8,5 +8,34 @@
 
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="main-container">
+      <div class="header-main-container">
+        <div class="nav-bar-main-container">
+          <div class="nav-bar-left-section">
+            <ul>
+              <li>Главная</li>
+              <li>Обо мне</li>
+              <li>Услуги</li>
+              <li>Отзывы</li>
+              <li>Вопросы</li>
+            </ul>
+          </div>
+          <div class="nav-bar-right-section">
+            <div class="date-div">
+              <h2>23</h2>
+              <h4>июля</h4>
+              <h3>2021</h3>
+            </div>
+            <img src="/icons/Rectangle 1181.png" alt="rec-line" />
+            <div class="date-div">
+              <h2>14</h2>
+              <h4>ава</h4>
+              <h3>5781</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
