added header elements and styled && styled nav-bar elements

--- a/main.html
+++ b/main.html
@@ -7,10 +7,25 @@
     <title>Psychologist</title>
 
     <link rel="stylesheet" href="style.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="main-container">
       <div class="header-main-container">
+        <!-- Nav Bar Main Container -->
         <div class="nav-bar-main-container">
           <div class="nav-bar-left-section">
             <ul>
@@ -32,6 +47,48 @@
               <h2>14</h2>
               <h4>ава</h4>
               <h3>5781</h3>
+            </div>
+          </div>
+        </div>
+        <div class="inner-header-bottom-div">
+          <!-- Inner Header Left Section -->
+          <div class="inner-header-left-section">
+            <h2>Эстер Рейзер</h2>
+            <h3>
+              Мадрихат калот, преподаватель иудаизма и семейный консультант
+            </h3>
+            <button>
+              <span>Записаться</span>
+            </button>
+          </div>
+          <!-- Inner Header Middle Section -->
+          <div class="inner-header-middle-section">
+            <img src="/images/image 4.png" alt="header-image" />
+          </div>
+          <!-- Inner Header Right Section -->
+          <div class="inner-header-right-section">
+            <div class="inner-header-right-section-top-div">
+              <p>
+                “Многие годы я веду курсы ортодоксального гиюра «Натив». Более
+                10 лет провожу занятия для женихов и невест, семейных пар, а
+                также желающих открыть для себя иудаизм”.
+              </p>
+            </div>
+            <div class="inner-header-right-section-bottom-div">
+              <ul>
+                <li>
+                  <img src="/icons/Тел.svg" alt="tel-icon" />
+                  <span>+972 50 412 1234</span>
+                </li>
+                <li>
+                  <img src="/icons/Почта.svg" alt="mail-icon" />
+                  <span>pochta@mail.ru</span>
+                </li>
+                <li>
+                  <img src="/icons/facebook.svg" alt="facebook-icon" />
+                  <span>facebook.com/1628</span>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
