added and styled second page

--- a/main.html
+++ b/main.html
@@ -22,11 +22,13 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
     <div class="main-container">
       <div class="header-main-container">
         <!-- Nav Bar Main Container -->
         <div class="nav-bar-main-container">
+          <!-- Nav Bar Left Section -->
           <div class="nav-bar-left-section">
             <ul>
               <li>Главная</li>
@@ -36,6 +38,7 @@
               <li>Вопросы</li>
             </ul>
           </div>
+          <!-- Nav Bar Right Section -->
           <div class="nav-bar-right-section">
             <div class="date-div">
               <h2>23</h2>
@@ -91,6 +94,35 @@
               </ul>
             </div>
           </div>
+        </div>
+      </div>
+      <!-- Second Page -->
+      <div class="second-page-main-container">
+        <div class="about-me-h1-div">
+          <h1>Обо мне</h1>
+        </div>
+        <div class="about-me-paragraph-div">
+          <p>
+            Я сделала алию в 15 лет будучи обычным советским подростком из
+            ассимилированной еврейской семьи. Мне посчастливилось познакомиться
+            с соблюдающими еврейскими семьями, побывать на Шабатах и наблюдать
+            жизнь еврейской семьи вблизи. Тогда я поняла, что это та семья,
+            которую я бы хотела создать - семья с принципами взаимоотношений,
+            основанными на взаимоуважении, любви, поддержке и общей цели. Так я
+            открыла для себя новую систему координат, центром которой являются
+            семейные узы. Постепенно я набиралась семейного опыта, училась
+            договариваться, выстраивать отношения с близкими на основе доверия и
+            любви. И чем больше знаний и опыта я получала, тем больше я
+            чувствовала потребность в их передаче другим людям. Искренне
+            убеждена, что семья – это основа основ, жизненный фундамент и
+            краеугольный камень существования любого человека. Я стараюсь
+            объединить полученный мною опыт, галахические принципы и основы
+            психологии для оказания помощи семейным парам на пути к их личному
+            счастью. На протяжении последних 10 лет еврейские девушки,
+            религиозные и светские пары приходят ко мне за поддержкой и
+            галахическими консультациями. Вместе мы учимся разбираться в самых
+            деликатных и важных темах.
+          </p>
         </div>
       </div>
     </div>
