third and fourth pages added and styled

--- a/main.html
+++ b/main.html
@@ -125,6 +125,58 @@
           </p>
         </div>
       </div>
+      <!-- Third Page -->
+      <div class="third-page-main-container">
+        <div class="">
+          <h1>Чем я могу Вам помочь</h1>
+          <div class="inner-third-page-div">
+            <div class="inner-third-page-left-section">
+              <img src="/images/pana.svg" alt="image1" />
+              <h3>Хадрахат калот</h3>
+              <p>
+                Семейная жизнь, как любая долгая дорога, требует подготовки. Для
+                этого и нужны предсвадебные консультации – важный этап на пути к
+                крепкому браку. Таким образом закладывается основа прочных
+                отношений...
+              </p>
+              <button>
+                <span>Подробнее</span>
+              </button>
+            </div>
+            <div class="inner-third-page-middle-section">
+              <img src="/images/rafiki.svg" alt="image2" />
+              <h3>Частные семейные консультации</h3>
+              <p>
+                Семейное счастье – не свод четко прописанных обязанностей.
+                Супруги, работающие со мной, учатся чувствовать переживания друг
+                друга и находить ключ к взаимопониманию...
+              </p>
+              <button>
+                <span>Подробнее</span>
+              </button>
+            </div>
+            <div class="inner-third-page-right-section">
+              <img src="/images/pana.svg" alt="image1" />
+              <h3>Уроки иудаизма</h3>
+              <p>
+                Недостаточно отыскать информацию, необходимо овладеть комплексом
+                системных знаний, которые позволяют ответить на волнующие вас
+                вопросы и помогают справиться с жизненными неурядицами.
+              </p>
+              <button>
+                <span>Подробнее</span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Fourth Page -->
+      <div class="fourth-page-main-container">
+        <img src="/images/4page image.png" alt="fpage image" />
+        <div class="pause-button-div">
+          <img src="/images/pause button.svg" alt="pause-button" />
+        </div>
+      </div>
     </div>
   </body>
 </html>
