added and styled 5 6 and 7 pages

--- a/main.html
+++ b/main.html
@@ -177,6 +177,129 @@
           <img src="/images/pause button.svg" alt="pause-button" />
         </div>
       </div>
+      <!-- Fifth Page -->
+      <div class="fifth-page-main-container">
+        <h1>Отзывы</h1>
+        <div class="inner-fifth-page-div">
+          <div>
+            <img src="/icons/next 2.svg" alt="previous-sign" />
+          </div>
+          <div class="fifth-page-paragraph-div">
+            <h3>18 августа 2021 | 10 эуля 5781</h3>
+            <p>
+              Отзыв на 500 сиволов символов is simply dummy text of the printing
+              and typesetting industry. Lorem Ipsum has been the industry's
+              standard dummy text ever since the 1500s, when an unknown printer
+              took a galley of type and scrambled it to make a type specimen
+              book. It has survived not only five centuries, but also the leap
+              into electronic typesetting, remaining essentially unchangedJтзыв
+              символов is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy tex
+            </p>
+            <h2>Иван Иванов</h2>
+          </div>
+          <div>
+            <img src="/icons/next 1.svg" alt="next-sign" />
+          </div>
+        </div>
+      </div>
+      <!-- Sixth Page -->
+      <div class="sixth-page-main-container">
+        <h1>Вопросы</h1>
+        <div class="inner-sixth-page-div">
+          <div class="question-first">
+            <div class="first-question-div">
+              <h3>
+                Апперцепция многопланово представляет собой непосредственный
+                канон?
+              </h3>
+              <img src="/icons/Vector.svg" alt="vector-up-icon" />
+            </div>
+            <p>
+              Композиция, в том числе, свободна. Иррациональное в творчестве
+              представляет собой сокращенный символизм, что-то подобное можно
+              встретить в работах Ауэрбаха и Тандлера. Канон, в том числе,
+              заканчивает хорал.
+            </p>
+            <img src="/icons/Line 1.svg" alt="line1" />
+          </div>
+          <div class="question-second">
+            <div class="second-question-div">
+              <h3>Художественное переживание?</h3>
+              <img src="/icons/Vector down.svg" alt="vector-down-icon" />
+            </div>
+            <img src="/icons/Line 1.svg" alt="line1" />
+          </div>
+          <div class="question-second">
+            <div class="second-question-div">
+              <h3>
+                Апперцепция многопланово представляет собой непосредственный
+                канон?
+              </h3>
+              <img src="/icons/Vector down.svg" alt="vector-down-icon" />
+            </div>
+            <img src="/icons/Line 1.svg" alt="line1" />
+          </div>
+          <div class="question-second">
+            <div class="second-question-div">
+              <h3>
+                Художественное переживание, согласно традиционным
+                представлениям, изящно диссонирует резкий цвет?
+              </h3>
+              <img src="/icons/Vector down.svg" alt="vector-down-icon" />
+            </div>
+            <img src="/icons/Line 1.svg" alt="line1" />
+          </div>
+          <div class="question-second">
+            <div class="second-question-div">
+              <h3>
+                Художественное переживание, согласно традиционным
+                представлениям, изящно диссонирует резкий цвет?
+              </h3>
+              <img src="/icons/Vector down.svg" alt="vector-down-icon" />
+            </div>
+            <img src="/icons/Line 1.svg" alt="line1" />
+          </div>
+          <div class="question-second">
+            <div class="second-question-div">
+              <h3>Художественное переживание?</h3>
+              <img src="/icons/Vector down.svg" alt="vector-down-icon" />
+            </div>
+            <img src="/icons/Line 1.svg" alt="line1" />
+          </div>
+          <div class="question-second">
+            <div class="second-question-div">
+              <h3>
+                Апперцепция многопланово представляет собой непосредственный
+                канон?
+              </h3>
+              <img src="/icons/Vector down.svg" alt="vector-down-icon" />
+            </div>
+            <img src="/icons/Line 1.svg" alt="line1" />
+          </div>
+          <div class="question-second">
+            <div class="second-question-div">
+              <h3>
+                Художественное переживание, согласно традиционным
+                представлениям, изящно диссонирует резкий цвет?
+              </h3>
+              <img src="/icons/Vector down.svg" alt="vector-down-icon" />
+            </div>
+            <img src="/icons/Line 1.svg" alt="line1" />
+          </div>
+        </div>
+      </div>
+      <!-- Seventh Page -->
+      <div class="seventh-page-main-container">
+        <div class="inner-seventh-page-left-div">
+          <img src="/pana.svg" alt="seventh-page-image" />
+        </div>
+        <div class="inner-seventh-page-right-div">
+          <h1>Не нашли ответна нужный вопрос?</h1>
+          <h3>Задайте его прямо сейчас!</h3>
+          <button><span>Задать вопрос</span></button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
